--- a/css/style.css
+++ b/css/style.css
@@ -1605,7 +1605,7 @@ input::placeholder {
   display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: flex-end; /* dhdfhfhdfddfdfhdf */
+          justify-content: flex-end;
   margin: 0;
   padding: 0;
   margin-top: 29px;
